Pull up NetworkManager